# estonia_workshop

./: .gitignore  README.md  embeddings.py  gen_attractions.py  pyproject.toml  schema.py
estonia_workshop/: app.py
